--- a/To_Do_List_Backend/backend-build/Jenkinsfile
+++ b/To_Do_List_Backend/backend-build/Jenkinsfile
@@ -13,9 +13,22 @@ pipeline {
     DOCKERHUB_USERNAME = 'inestmimi123'
     DOCKERHUB_IMAGE = 'todo-backend'
     IMAGE_TAG = 'latest'
+    DOCKER_BUILDKIT = '1'
   }
 
   stages {
+    stage('Checkout & Cache Preparation') {
+      steps {
+        script {
+          sh '''
+            echo "Using persistent workspace at /workspace"
+            mkdir -p /workspace/backend-build
+            cp -r . /workspace/backend-build/ || true
+          '''
+        }
+      }
+    }
+
     stage('Docker Login') {
       steps {
         withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
@@ -30,7 +43,13 @@ pipeline {
       steps {
         dir('To_Do_List') {
           sh '''
-            docker build -t $DOCKERHUB_USERNAME/$DOCKERHUB_IMAGE:$IMAGE_TAG .
+            echo "Building with Docker cache from PVC..."
+            docker build \
+              --cache-from $DOCKERHUB_USERNAME/$DOCKERHUB_IMAGE:cache \
+              --build-arg BUILDKIT_INLINE_CACHE=1 \
+              -t $DOCKERHUB_USERNAME/$DOCKERHUB_IMAGE:$IMAGE_TAG \
+              -t $DOCKERHUB_USERNAME/$DOCKERHUB_IMAGE:cache \
+              .
           '''
         }
       }
@@ -39,15 +58,32 @@ pipeline {
     stage('Push to Docker Hub') {
       steps {
         sh '''
+          echo "Pushing images..."
           docker push $DOCKERHUB_USERNAME/$DOCKERHUB_IMAGE:$IMAGE_TAG
+          docker push $DOCKERHUB_USERNAME/$DOCKERHUB_IMAGE:cache
+        '''
+      }
+    }
+
+    stage('Cache Cleanup') {
+      steps {
+        sh '''
+          echo "Cleaning up old Docker images to preserve cache space..."
+          docker system prune -f --filter "until=24h"
         '''
       }
     }
   }
 
   post {
+    always {
+      sh '''
+        echo "Saving build artifacts to persistent storage..."
+        cp -r . /workspace/backend-build-$(date +%Y%m%d-%H%M%S)/ || true
+      '''
+    }
     success {
-      echo "Backend image pushed successfully to Docker Hub!"
+      echo "Backend image built and pushed successfully with persistent cache!"
     }
     failure {
       echo "Build or push failed."
