--- a/infrastructure/persistent-volumes.yaml
+++ b/infrastructure/persistent-volumes.yaml
@@ -1,38 +1,30 @@
-# jenkins-build-pvcs.yaml
-# PVC pour le cache Docker partagé entre les builds
+# jenkins-build-pvcs-separated.yaml
+# PVC BACKEND - Cache Docker spécifique
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: jenkins-docker-cache-pvc
+  name: jenkins-backend-docker-cache-pvc
   namespace: jenkins-developer
+  labels:
+    component: backend
+    type: docker-cache
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 20Gi
-  storageClassName: standard  # Ajustez selon votre classe de stockage
----
-# PVC pour les workspaces Jenkins
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: jenkins-workspace-pvc
-  namespace: jenkins-developer
-spec:
-  accessModes:
-    - ReadWriteMany  # Pour permettre le partage entre plusieurs builds
-  resources:
-    requests:
-      storage: 10Gi
+      storage: 15Gi
   storageClassName: standard
 ---
-# PVC pour le cache node_modules (frontend)
+# PVC BACKEND - Workspace spécifique
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: jenkins-node-modules-pvc
+  name: jenkins-backend-workspace-pvc
   namespace: jenkins-developer
+  labels:
+    component: backend
+    type: workspace
 spec:
   accessModes:
     - ReadWriteOnce
@@ -41,16 +33,104 @@ spec:
       storage: 5Gi
   storageClassName: standard
 ---
-# PVC pour les artefacts de build (optionnel)
+# PVC BACKEND - Artefacts spécifiques
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: jenkins-build-artifacts-pvc
+  name: jenkins-backend-artifacts-pvc
   namespace: jenkins-developer
+  labels:
+    component: backend
+    type: artifacts
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 8Gi
+  storageClassName: standard
+---
+# PVC FRONTEND - Cache Docker spécifique
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: jenkins-frontend-docker-cache-pvc
+  namespace: jenkins-developer
+  labels:
+    component: frontend
+    type: docker-cache
+spec:
+  accessModes:
+    - ReadWriteOnce
   resources:
     requests:
       storage: 15Gi
+  storageClassName: standard
+---
+# PVC FRONTEND - Workspace spécifique
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: jenkins-frontend-workspace-pvc
+  namespace: jenkins-developer
+  labels:
+    component: frontend
+    type: workspace
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
+  storageClassName: standard
+---
+# PVC FRONTEND - Cache node_modules
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: jenkins-frontend-node-modules-pvc
+  namespace: jenkins-developer
+  labels:
+    component: frontend
+    type: node-cache
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 3Gi
+  storageClassName: standard
+---
+# PVC FRONTEND - Artefacts spécifiques
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: jenkins-frontend-artifacts-pvc
+  namespace: jenkins-developer
+  labels:
+    component: frontend
+    type: artifacts
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 8Gi
+  storageClassName: standard
+---
+# PVC OPTIONNEL - Cache commun pour outils partagés (Maven, npm global, etc.)
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: jenkins-shared-tools-cache-pvc
+  namespace: jenkins-developer
+  labels:
+    component: shared
+    type: tools-cache
+spec:
+  accessModes:
+    - ReadWriteMany  # Peut être partagé
+  resources:
+    requests:
+      storage: 5Gi
   storageClassName: standard
