--- a/To_Do_List/frontend-build/Jenkinsfile
+++ b/To_Do_List/frontend-build/Jenkinsfile
@@ -2,7 +2,6 @@ pipeline {
   agent {
     kubernetes {
       label 'jenkins-frontend-build'
-      defaultContainer 'docker'
       namespace 'jenkins-developer'
       serviceAccount 'jenkins-deployer'
     }
@@ -13,16 +12,36 @@ pipeline {
     DOCKERHUB_IMAGE = 'todo-frontend'
     IMAGE_TAG = 'latest'
     DOCKER_BUILDKIT = '1'
+    WORKSPACE_DIR = '/workspace/frontend-build'
+    NODE_MODULES_DIR = '/node_modules'
   }
 
   stages {
-    stage('Checkout & Cache Preparation') {
+    stage('Checkout & Prepare Workspace') {
       steps {
         script {
           sh '''
-            echo "Using persistent workspace at /workspace/frontend-build"
-            mkdir -p /workspace/frontend-build
-            cp -r . /workspace/frontend-build/ || true
+            echo "Setting up persistent workspace at $WORKSPACE_DIR"
+            mkdir -p $WORKSPACE_DIR
+            if [ ! -d "$WORKSPACE_DIR/To_Do_List" ]; then
+              cp -r . $WORKSPACE_DIR/
+            fi
+          '''
+        }
+      }
+    }
+
+    stage('Install Dependencies') {
+      steps {
+        dir("$WORKSPACE_DIR/To_Do_List") {
+          sh '''
+            echo "Checking for existing node_modules..."
+            if [ ! -d "$NODE_MODULES_DIR" ]; then
+              echo "Installing dependencies..."
+              npm ci
+            else
+              echo "Reusing existing node_modules from PVC"
+            fi
           '''
         }
       }
@@ -32,6 +51,7 @@ pipeline {
       steps {
         withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
           sh '''
+            echo "Logging into Docker Hub..."
             echo "$PASSWORD" | docker login -u "$USERNAME" --password-stdin
           '''
         }
@@ -40,11 +60,10 @@ pipeline {
 
     stage('Build Frontend Image') {
       steps {
-        dir('To_Do_List') {
+        dir("$WORKSPACE_DIR/To_Do_List") {
           sh '''
             echo "Building frontend Docker image with Docker BuildKit..."
             DOCKER_BUILDKIT=1 docker build \
-              --build-arg BUILDKIT_INLINE_CACHE=1 \
               -t $DOCKERHUB_USERNAME/$DOCKERHUB_IMAGE:$IMAGE_TAG \
               .
           '''
@@ -61,10 +80,10 @@ pipeline {
       }
     }
 
-    stage('Cache Cleanup') {
+    stage('Cleanup') {
       steps {
         sh '''
-          echo "Cleaning up old Docker images to preserve cache space..."
+          echo "Cleaning up old Docker images to preserve space..."
           docker system prune -f --filter "until=24h"
         '''
       }
@@ -74,8 +93,9 @@ pipeline {
   post {
     always {
       sh '''
-        echo "Saving frontend build artifacts to persistent storage..."
-        cp -r . /workspace/frontend-build-$(date +%Y%m%d-%H%M%S)/ || true
+        echo "Saving build artifacts to persistent storage..."
+        mkdir -p /artifacts/build-$(date +%Y%m%d-%H%M%S)
+        cp -r $WORKSPACE_DIR/To_Do_List/dist /artifacts/build-$(date +%Y%m%d-%H%M%S)/ || true
       '''
     }
     success {
