--- a/To_Do_List_Backend/backend-build/Jenkinsfile
+++ b/To_Do_List_Backend/backend-build/Jenkinsfile
@@ -2,6 +2,7 @@ pipeline {
   agent {
     kubernetes {
       label 'jenkins-backend-build'
+      defaultContainer 'docker'
       namespace 'jenkins-developer'
       serviceAccount 'jenkins-deployer'
     }
@@ -12,40 +13,16 @@ pipeline {
     DOCKERHUB_IMAGE = 'todo-backend'
     IMAGE_TAG = 'latest'
     DOCKER_BUILDKIT = '1'
-    WORKSPACE_DIR = '/workspace/backend-build'
-    NODE_MODULES_DIR = '/node_modules'
-    DATA_DIR = '/app/data'
   }
 
   stages {
-    stage('Checkout & Prepare Workspace') {
+    stage('Checkout & Cache Preparation') {
       steps {
         script {
           sh '''
-            echo "Setting up persistent workspace at $WORKSPACE_DIR"
-            mkdir -p $WORKSPACE_DIR
-            # Copy source code to persistent workspace only if not already present
-            if [ ! -d "$WORKSPACE_DIR/To_Do_List_Backend" ]; then
-              cp -r . $WORKSPACE_DIR/
-            fi
-            # Ensure data directory exists
-            mkdir -p $DATA_DIR
-          '''
-        }
-      }
-    }
-
-    stage('Install Dependencies') {
-      steps {
-        dir("$WORKSPACE_DIR/To_Do_List_Backend") {
-          sh '''
-            echo "Checking for existing node_modules..."
-            if [ ! -d "$NODE_MODULES_DIR" ]; then
-              echo "Installing dependencies..."
-              npm ci --only=production
-            else
-              echo "Reusing existing node_modules from PVC"
-            fi
+            echo "Using persistent workspace at /workspace/backend-build"
+            mkdir -p /workspace/backend-build
+            cp -r . /workspace/backend-build/ || true
           '''
         }
       }
@@ -55,7 +32,6 @@ pipeline {
       steps {
         withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
           sh '''
-            echo "Logging into Docker Hub..."
             echo "$PASSWORD" | docker login -u "$USERNAME" --password-stdin
           '''
         }
@@ -64,10 +40,11 @@ pipeline {
 
     stage('Build Backend Image') {
       steps {
-        dir("$WORKSPACE_DIR/To_Do_List_Backend") {
+        dir('To_Do_List_Backend') {
           sh '''
-            echo "Building backend Docker image with Docker BuildKit..."
+            echo "Building with Docker BuildKit and local cache..."
             DOCKER_BUILDKIT=1 docker build \
+              --build-arg BUILDKIT_INLINE_CACHE=1 \
               -t $DOCKERHUB_USERNAME/$DOCKERHUB_IMAGE:$IMAGE_TAG \
               .
           '''
@@ -75,19 +52,20 @@ pipeline {
       }
     }
 
+
     stage('Push to Docker Hub') {
       steps {
         sh '''
-          echo "Pushing backend image..."
+          echo "Pushing images..."
           docker push $DOCKERHUB_USERNAME/$DOCKERHUB_IMAGE:$IMAGE_TAG
         '''
       }
     }
 
-    stage('Cleanup') {
+    stage('Cache Cleanup') {
       steps {
         sh '''
-          echo "Cleaning up old Docker images to preserve space..."
+          echo "Cleaning up old Docker images to preserve cache space..."
           docker system prune -f --filter "until=24h"
         '''
       }
@@ -98,15 +76,14 @@ pipeline {
     always {
       sh '''
         echo "Saving build artifacts to persistent storage..."
-        mkdir -p /artifacts/build-$(date +%Y%m%d-%H%M%S)
-        cp -r $WORKSPACE_DIR/To_Do_List_Backend /artifacts/build-$(date +%Y%m%d-%H%M%S)/ || true
+        cp -r . /workspace/backend-build-$(date +%Y%m%d-%H%M%S)/ || true
       '''
     }
     success {
       echo "Backend image built and pushed successfully with persistent cache!"
     }
     failure {
-      echo "Backend build or push failed."
+      echo "Build or push failed."
     }
   }
 }
